--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 {
-  "ownerNumber": "6281575886399@s.whatsapp.net",
-  "ownerName": "Riy",
-  "botName": "Minato-Md",
-  "footer": "Support By skysufers.xyz",
-  "youtube": "https://youtube.com/@riycoders",
-  "packname": "Created By",
-  "author": "@riycoders",
+  "ownerNumber": "4474512066766@s.whatsapp.net",
+  "ownerName": "Amel Yameteh😘😍😋",
+  "botName": "© Lisabotz-MD😍🥰😘",
+  "footer": "Support https://instagram.com/anggatzi123",
+  "youtube": "https://instagram.com/anggatzi123",
+  "packname": "Created By AnggaKz🔥",
+  "author": "@Mell😋😍😘🥰",
   "donasi": {
-    "dana": "081575886399",
-    "gopay": "081575886399"
+    "dana": "081998425782",
+    "gopay": "gk ada"
   },
   "sessionName": "session",
-  "pathimg": "./media/minato.jpg",
+  "pathimg": "./media/7732bfe51150b0ad497e6e7460c36c56.jpg",
   "lolkey": "SadTeams",
   "gamewaktu": 90,
   "limitCount": 25,
   "gcount": {
-    "prem": 35,
+    "prem": 100,
     "user": 15
   }
 }
