--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "ownerNumber": "4474512066766@s.whatsapp.net",
-  "ownerName": "Amel Yameteh😘😍😋",
+  "ownerNumber": "6281998425782@s.whatsapp.net",
+  "ownerName": "AnggaKz🗿",
   "botName": "© Lisabotz-MD😍🥰😘",
   "footer": "Support https://instagram.com/anggatzi123",
   "youtube": "https://instagram.com/anggatzi123",
   "packname": "Created By AnggaKz🔥",
-  "author": "@Mell😋😍😘🥰",
+  "author": "© Lisabotz-MD😋😍😘🥰",
   "donasi": {
     "dana": "081998425782",
     "gopay": "gk ada"
