--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "ownerNumber": ["6285923463470@s.whatsapp.net","6281998425782@s.whatsapp.net"],
+  "ownerNumber": "6285923463470@s.whatsapp.net","6281998425782@s.whatsapp.net",
   "ownerName": "AnggaKz🗿",
   "botName": "© Lisabotz-MD😍🥰😘",
-  "footer": "Support https://instagram.com/anggatzi123",
+  "footer": "Follow https://instagram.com/anggatzi123",
   "youtube": "https://instagram.com/anggatzi123",
   "packname": "Created By AnggaKz🔥",
   "author": "© Lisabotz-MD😋😍😘🥰",
