--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "ownerNumber": "6285923463470@s.whatsapp.net","6281998425782@s.whatsapp.net",
+  "ownerNumber": "6285923463470@s.whatsapp.net",
   "ownerName": "AnggaKz🗿",
   "botName": "© Lisabotz-MD😍🥰😘",
   "footer": "Follow https://instagram.com/anggatzi123",
