--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
   "botName": "© Lisabotz-MD😍🥰😘",
   "footer": "Follow https://instagram.com/anggatzi123",
   "youtube": "https://instagram.com/anggatzi123",
-  "packname": "Created By AnggaKz",
-  "author": "© Lisabotz-MD",
+  "packname": "AnggaKz",
+  "author": "Lisabotz-MD",
   "donasi": {
     "dana": "081998425782",
     "gopay": "gk ada"
