--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
   "ownerNumber": "6285923463470@s.whatsapp.net",
   "ownerName": "AnggaKz🗿",
-  "botName": "© Lisabotz-MD😍🥰😘",
+  "botName": "Lisabotz-MD",
   "footer": "Follow https://instagram.com/anggatzi123",
   "youtube": "https://instagram.com/anggatzi123",
-  "packname": "AnggaKz",
-  "author": "Lisabotz-MD",
+  "packname": "Created By",
+  "author": "@AnggaKz",
   "donasi": {
     "dana": "081998425782",
     "gopay": "gk ada"
